se agrega click en pelicula para mostrar detalle

--- a/css/peliculaBuscada.css
+++ b/css/peliculaBuscada.css
@@ -4,12 +4,13 @@
            margin: auto;
             border: 1px solid #ccc;
             border-radius: 5px;
-            width: 300px;
+            width: 400px;
+            height: auto;
          
         }
         .pelicula img {
-            width: 200px;
-            height: 200px;
+            width: 300px;
+            height: 300px;
             border-radius: 5px;
             
         }
@@ -26,6 +27,7 @@
         .pelicula .detalles {
             margin-top: 10px;
             font-weight: 200;
+            margin-bottom: 15px;
 
         }
     .titulo {
@@ -42,4 +44,16 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 60px;
+    }
+
+    @media (max-width: 768px) {
+
+        .pelicula {          
+            width: 300px;        
+        }
+        .pelicula img {
+            width: 200px;
+            height: 200px;          
+        }
+
     }
