--- a/css/listados.css
+++ b/css/listados.css
@@ -1,3 +1,5 @@
+@import url('/css/var_globales.css');
+
 .body {
     background-color:#181419;
    
@@ -8,7 +10,24 @@
 
 .principal{
   
-    background-color:#9f3647;
+    background-color:var(--color);
     color: white;
     padding-bottom: 10px;
+}
+.img-listado {
+    width: 100px;
+    height: 150px;
+    margin-bottom: 20px;
+    border: 1px solid white;
+}
+
+
+@media (max-width: 768px) {
+
+.agregar{
+   font-size: 10px !important;
+}
+.editar {
+    margin-bottom: 10px;
+}
 }
